turtleart.polygon20.Polygon20.scala.error
Compilation error:
Polygon20:1: error: Missing closing brace `}' assumed here
override def run() {{for (i<-1 to 20) {avance(30);droite(18)
^Polygon20:1: error: expected start of definition
override def run() {{for (i<-1 to 20) {avance(30);droite(18)
         ^